--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 git+https://github.com/OpenIsraeliSupermarkets/israeli-supermarket-parsers.git@main
-git+https://github.com/OpenIsraeliSupermarkets/israeli-supermarket-scrapers.git@main
+git+https://github.com/OpenIsraeliSupermarkets/israeli-supermarket-scrapers.git@master
 
