--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,2 @@
-git+https://github.com/OpenIsraeliSupermarkets/israeli-supermarket-parsers.git@main
-git+https://github.com/OpenIsraeliSupermarkets/israeli-supermarket-scrapers.git@master
-
+git+https://github.com/OpenIsraeliSupermarkets/israeli-supermarket-parsers.git@dev
+kaggle==1.6.17
