--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,7 @@
 {
     "build": { 
       "dockerfile": "../Dockerfile",
+      "target":"base",
       "args": {
         "PY_VERSION":"3.11.0"
         }
