--- a/.github/workflows/cron-publish.yml
+++ b/.github/workflows/cron-publish.yml
@@ -35,9 +35,10 @@ jobs:
         df --human-readable
     - name: Build with Docker
       run: docker build -t erlichsefi/israeli-supermarket-publisher:prod --target prod .
+    - name: Remove all build
+      run: (docker stop publisher-runner 2>/dev/null || true) && (docker rm publisher-runner 2>/dev/null || true)
     - name: Daily Dump
       run: |
-           mkdir -p temp &&
-           docker rm publisher-runner || true &&
-           docker run --rm -v ./temp:/usr/src/app/temp --name publisher-runner erlichsefi/israeli-supermarket-publisher:prod &&
+           mkdir -p app_data &&
+           docker run --rm -v ./app_data:/usr/src/app/app_data   --name publisher-runner erlichsefi/israeli-supermarket-publisher:prod &&
            docker builder prune -f
