--- a/.github/workflows/cron-publish.yml
+++ b/.github/workflows/cron-publish.yml
@@ -40,5 +40,9 @@ jobs:
     - name: Daily Dump
       run: |
            mkdir -p app_data &&
-           docker run --rm -v ./app_data:/usr/src/app/app_data   --name publisher-runner erlichsefi/israeli-supermarket-publisher:prod &&
+           docker run --rm \
+            -v ./app_data:/usr/src/app/app_data \
+            -e KAGGLE_KEY=$KAGGLE_KEY \
+            -e KAGGLE_USERNAME=$KAGGLE_USERNAME \
+            --name publisher-runner erlichsefi/israeli-supermarket-publisher:prod &&
            docker builder prune -f
