--- a/.github/workflows/cron-publish.yml
+++ b/.github/workflows/cron-publish.yml
@@ -23,7 +23,10 @@ jobs:
         python-version: ["3.11.0"]
 
     steps:
-
+    - name: clean-old
+      run: |
+      sudo rm -rf ${{ github.workspace }}
+      
     - name: Checkout
       uses: actions/checkout@v3
     - name: Free disk space
