--- a/.github/workflows/cron-publish.yml
+++ b/.github/workflows/cron-publish.yml
@@ -24,8 +24,7 @@ jobs:
 
     steps:
     - name: clean-old
-      run: |
-      sudo rm -rf "${{ github.workspace }}"
+      run: sudo rm -rf "${{ github.workspace }}"
       
     - name: Checkout
       uses: actions/checkout@v3
