--- a/.github/workflows/cron-publish.yml
+++ b/.github/workflows/cron-publish.yml
@@ -4,9 +4,10 @@
 name: Publish Data to Kaggle
 
 
-on:
+on: 
   schedule:
-    - cron:  '00 20 * * *'
+    - cron: '00 20 * * *'
+  workflow_dispatch:
     
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
