--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,8 @@
       "dockerfile": "../Dockerfile",
       "target":"base",
       "args": {
-        "PY_VERSION":"3.11.0"
+        "PY_VERSION":"3.11.0",
+        "TZ": "Asia/Jerusalem"
         }
   },
   "customizations": {
