--- a/.github/workflows/cron-publish.yml
+++ b/.github/workflows/cron-publish.yml
@@ -45,5 +45,6 @@ jobs:
             -v ./app_data:/usr/src/app/app_data \
             -e KAGGLE_KEY=$KAGGLE_KEY \
             -e KAGGLE_USERNAME=$KAGGLE_USERNAME \
+            -e TZ=Asia/Jerusalem \
             --name publisher-runner erlichsefi/israeli-supermarket-publisher:prod &&
            docker builder prune -f
