--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,8 +3,7 @@
       "dockerfile": "../Dockerfile",
       "target":"base",
       "args": {
-        "PY_VERSION":"3.11.0",
-        "TZ": "Asia/Jerusalem"
+        "PY_VERSION":"3.11.0"
         }
   },
   "customizations": {
@@ -17,4 +16,4 @@
         ]
       }
     }
-  }
+  }       
