--- a/.github/workflows/cron-scrape.yml
+++ b/.github/workflows/cron-scrape.yml
@@ -1,11 +1,14 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Parse and Publish
+name: Scrape Itreation 
 
 on: 
   schedule:
     - cron: '00 08 * * *'
+    - cron: '00 12 * * *'
+    - cron: '00 17 * * *'
+    - cron: '00 21 * * *'
   workflow_dispatch:
 
 jobs:
