--- a/.github/workflows/cron-publish.yml
+++ b/.github/workflows/cron-publish.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Parse and Publish
+name: Last Mile Scrape, Parse and Publish
 
 on: 
   schedule:
@@ -18,7 +18,7 @@ jobs:
         python-version: ["3.11.0"]
 
     env:
-      OPREATION: "scraping"
+      OPREATION: "all"
 
     steps:
     - name: Clean Old
