--- a/.github/workflows/late-night-scraping.yml
+++ b/.github/workflows/late-night-scraping.yml
@@ -1,14 +1,15 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: After-Noon Scrape Itreation 
+name: Last Mile
 
 on: 
   schedule:
-    - cron: '00 16 * * *'
+  - cron: '00 23 * * *'
 
 jobs:
   call-workflow:
     uses: OpenIsraeliSupermarkets/daily-publish-supermarket-data/.github/workflows/template.yml@dev
     with:
       opreation: "scraping"
+    
