--- a/.github/workflows/publishing.yml
+++ b/.github/workflows/publishing.yml
@@ -1,14 +1,15 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: After-Noon Scrape Itreation 
+name: Publishing
 
 on: 
   schedule:
-    - cron: '00 16 * * *'
+    - cron: '00 00 * * *'
+
 
 jobs:
   call-workflow:
     uses: OpenIsraeliSupermarkets/daily-publish-supermarket-data/.github/workflows/template.yml@dev
     with:
-      opreation: "scraping"
+      opreation: "publishing"
