--- a/.github/workflows/evening-scrape.yml
+++ b/.github/workflows/evening-scrape.yml
@@ -5,10 +5,10 @@ name: Last Mile
 
 on: 
   schedule:
-  - cron: '00 20 * * *'
+  - cron: '00 17 * * *'
 
 jobs:
   call-workflow:
-    uses: OpenIsraeliSupermarkets/daily-publish-supermarket-data/.github/workflows/template.yml@dev
+    uses: OpenIsraeliSupermarkets/daily-publish-supermarket-data/.github/workflows/template.yml@main
     with:
       opreation: "scraping"
