--- a/.github/workflows/publishing.yml
+++ b/.github/workflows/publishing.yml
@@ -5,11 +5,10 @@ name: Publishing
 
 on: 
   schedule:
-    - cron: '00 00 * * *'
-
+    - cron: '00 21 * * *'
 
 jobs:
   call-workflow:
-    uses: OpenIsraeliSupermarkets/daily-publish-supermarket-data/.github/workflows/template.yml@dev
+    uses: OpenIsraeliSupermarkets/daily-publish-supermarket-data/.github/workflows/template.yml@main
     with:
       opreation: "publishing"
