--- a/.github/workflows/publishing.yml
+++ b/.github/workflows/publishing.yml
@@ -11,4 +11,5 @@ jobs:
   call-workflow:
     uses: OpenIsraeliSupermarkets/daily-publish-supermarket-data/.github/workflows/template.yml@main
     with:
-      opreation: "publishing"
+      operation: "publishing"
+    secrets: inherit
