--- a/.github/workflows/noon-scrape.yml
+++ b/.github/workflows/noon-scrape.yml
@@ -11,4 +11,5 @@ jobs:
   call-workflow:
     uses: OpenIsraeliSupermarkets/daily-publish-supermarket-data/.github/workflows/template.yml@main
     with:
-      opreation: "scraping"
+      operation: "scraping"
+    secrets: inherit
