--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -23,10 +23,10 @@ jobs:
       OPERATION: ${{ inputs.operation }}
 
     steps:
-    - name: Clean Old
-      run: |
-        sudo rm -rf "${{ github.workspace }}"
-        mkdir "${{ github.workspace }}"
+    # - name: Clean Old
+    #   run: |
+    #     sudo rm -rf "${{ github.workspace }}"
+    #     mkdir "${{ github.workspace }}"
       
     - name: Checkout
       uses: actions/checkout@v3
