--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 il-supermarket-scraper==0.5.0
-il-supermarket-parser==0.0.4
+git+https://github.com/OpenIsraeliSupermarkets/israeli-supermarket-parsers@dev
+kaggle==1.6.17
+schedule==1.2.2
 kaggle==1.6.17
 schedule==1.2.2
