--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -47,8 +47,8 @@ jobs:
            mkdir -p  ${{ runner.workspace }}/app_data
            docker run --rm \
             -v ${{ runner.workspace }}/app_data:/usr/src/app/app_data \
-            -e KAGGLE_KEY=$KAGGLE_KEY \
-            -e KAGGLE_USERNAME=$KAGGLE_USERNAME \
+            -e KAGGLE_KEY=${{KAGGLE_KEY}} \
+            -e KAGGLE_USERNAME=${{KAGGLE_USERNAME}} \
             -e OPREATION="${{ env.OPERATION }}" \
             --name publisher-runner erlichsefi/israeli-supermarket-publisher:prod &&
            docker builder prune -f
