--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 il-supermarket-scraper==0.5.0
-git+https://github.com/OpenIsraeliSupermarkets/israeli-supermarket-parsers@dev
+il-supermarket-parser==0.0.5
 kaggle==1.6.17
 schedule==1.2.2
 kaggle==1.6.17
