--- a/.github/workflows/emergency_upload.yml
+++ b/.github/workflows/emergency_upload.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Emergency Upload
+name: Emergency Upload No Compose
 
 on: 
   workflow_dispatch:
@@ -10,5 +10,5 @@ jobs:
   call-workflow:
     uses: OpenIsraeliSupermarkets/daily-publish-supermarket-data/.github/workflows/template.yml@main
     with:
-      operation: "upload"
+      operation: "upload_no_compose"
     secrets: inherit
