--- a/.github/workflows/morning-scrape.yml
+++ b/.github/workflows/morning-scrape.yml
@@ -12,5 +12,5 @@ jobs:
   call-workflow:
     uses: OpenIsraeliSupermarkets/daily-publish-supermarket-data/.github/workflows/template.yml@main
     with:
-      operation: "scraping"
+      operation: "scraping,converting,clean_dump_files"
     secrets: inherit
