--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,11 +1,11 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Evening Scrape
+name: Noon Scrape Itreation 
 
 on: 
   schedule:
-    - cron: '00 17 * * *'
+    - cron: '0 */3 * * *'
   workflow_dispatch:
 
 jobs:
