--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -31,12 +31,12 @@ jobs:
       
     - name: Checkout
       uses: actions/checkout@v3
-    - name: Free disk space
-      run: |
-        df --human-readable
-        docker 2>/dev/null 1>&2 rmi $(docker image ls --all --quiet) || true
-        rm --recursive --force "$AGENT_TOOLSDIRECTORY"
-        df --human-readable
+    # - name: Free disk space
+    #   run: |
+    #     df --human-readable
+    #     docker 2>/dev/null 1>&2 rmi $(docker image ls --all --quiet) || true
+    #     rm --recursive --force "$AGENT_TOOLSDIRECTORY"
+    #     df --human-readable
     - name: Build with Docker
       run: docker compose build
 
