--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -30,16 +30,16 @@ jobs:
     - name: Build with Docker
       run: docker compose build
 
-    - name: Make sure App Data folder exists
-      run: mkdir -p  ${{ runner.workspace }}/app_data
+    - name: Print workspace
+      run: echo ${{ env.GITHUB_WORKSPACE }}
+
+    - name: Make sure folders exists
+      run: |-
+          mkdir -p  ${{ env.GITHUB_WORKSPACE }}/mongo_data &&
+          mkdir -p  ${{ env.GITHUB_WORKSPACE }}/app_data
 
     - name: Make sure Mongo Up
       run: docker compose up -d mongodb
 
     - name: Process Request
-      run:  OPREATION="${{ env.OPERATION }}" \
-            KAGGLE_USERNAME=${{ secrets.KAGGLE_USERNAME }} \ 
-            KAGGLE_KEY=${{ secrets.KAGGLE_KEY }} \ 
-            APP_DATA_PATH=${{ runner.workspace }}/app_data \ 
-            MONGO_DATA_PATH=${{ runner.workspace }}/mongo_data \ 
-            docker-compose up publisher 
+      run:  OPREATION="${{ env.OPERATION }}" KAGGLE_USERNAME=${{ secrets.KAGGLE_USERNAME }} KAGGLE_KEY=${{ secrets.KAGGLE_KEY }} APP_DATA_PATH=${{ env.GITHUB_WORKSPACE }}/app_data MONGO_DATA_PATH=${{ env.GITHUB_WORKSPACE }}/mongo_data docker compose up publisher 
