--- a/.github/workflows/deploy_api.yml
+++ b/.github/workflows/deploy_api.yml
@@ -13,8 +13,8 @@ jobs:
 
       - name: Adding env variables
         run: |
-          echo "APP_DATA_PATH=${{ env.GITHUB_WORKSPACE }}/app_data" >> $GITHUB_ENV
-          echo "MONGO_DATA_PATH=${{ env.GITHUB_WORKSPACE }}/mongo_data" >> $GITHUB_ENV
+          echo "APP_DATA_PATH=${{ runner.workspace }}/app_data" >> $GITHUB_ENV
+          echo "MONGO_DATA_PATH=${{ runner.workspace}}/mongo_data" >> $GITHUB_ENV
 
       - name: Stoping Old Container
         run: docker compose down
