--- a/.github/workflows/deploy_api.yml
+++ b/.github/workflows/deploy_api.yml
@@ -10,8 +10,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-
-      - name: Adding env variables
+      
+      - uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          
+      - name: Adding env variables    
         run: |
           echo "APP_DATA_PATH=${{ runner.workspace }}/app_data" >> $GITHUB_ENV
           echo "MONGO_DATA_PATH=${{ runner.workspace}}/mongo_data" >> $GITHUB_ENV
