--- a/.env.templete
+++ b/.env.templete
@@ -11,5 +11,6 @@ APP_DATA_PATH=path_to_app_data_folder
 LIMIT=10
 OPREATION=scraping,converting,clean_dump_files,api_update
 
+SUPABASE_TOKEN=supabase_token
 SUPABASE_URL=supabase_url
 SUPABASE_KEY=supabase_key
