--- a/.github/workflows/deploy_api.yml
+++ b/.github/workflows/deploy_api.yml
@@ -21,6 +21,11 @@ jobs:
         run: |
           echo "APP_DATA_PATH=${{ runner.workspace }}/app_data" >> $GITHUB_ENV
           echo "MONGO_DATA_PATH=${{ runner.workspace}}/mongo_data" >> $GITHUB_ENV
+          echo "MONGO_URL=${{ secrets.MONGO_URL }}" >> $GITHUB_ENV
+          echo "MONGO_PORT=${{ secrets.MONGO_PORT }}" >> $GITHUB_ENV
+          echo "SUPABASE_KEY=${{ secrets.SUPABASE_KEY }}" >> $GITHUB_ENV
+          echo "SUPABASE_URL=${{ secrets.SUPABASE_URL }}" >> $GITHUB_ENV
+
 
       - name: Stoping Old Container
         run: docker compose down
