--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -31,6 +31,9 @@ jobs:
       run: |
         echo "APP_DATA_PATH=${{ runner.workspace }}/app_data" >> $GITHUB_ENV
         echo "MONGO_DATA_PATH=${{ runner.workspace }}/mongo_data" >> $GITHUB_ENV
+        echo "MONGO_URL=${{ secrets.MONGO_URL }}" >> $GITHUB_ENV
+        echo "MONGO_PORT=${{ secrets.MONGO_PORT }}" >> $GITHUB_ENV
+        echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" >> $GITHUB_ENV
         echo "KAGGLE_USERNAME=${{ secrets.KAGGLE_USERNAME }}" >> $GITHUB_ENV
         echo "KAGGLE_KEY=${{ secrets.KAGGLE_KEY }}" >> $GITHUB_ENV
         echo "OPREATION=${{ inputs.operation }}" >> $GITHUB_ENV
