--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   mongodb:
     image: mongo:latest
@@ -29,6 +28,10 @@ services:
       - MONGODB_URI=mongodb://${MONGO_URL}:${MONGO_PORT}/
       - SUPABASE_KEY=${SUPABASE_KEY}
       - SUPABASE_URL=${SUPABASE_URL}
+      - KAGGLE_KEY=${KAGGLE_KEY}
+      - KAGGLE_USERNAME=${KAGGLE_USERNAME}
+      - LONG_TERM_MEMORY=${LONG_TERM_MEMORY}
+      - SHORT_TERM_MEMORY=${SHORT_TERM_MEMORY}
     networks:
       - mongo-network
     restart: unless-stopped
