--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,13 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
+        {
+            "name": "Data Validation",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "data_validation/data_serving_validation.py",
+            "console": "integratedTerminal",
+        },
         {
             "name": "Test Daliy Raw Dump",
             "type": "debugpy",
