--- a/.github/workflows/_prod_publishing.yml
+++ b/.github/workflows/_prod_publishing.yml
@@ -1,14 +1,16 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Publishing Retry (only next day)
+name: Publishing | Production
 
 on: 
+  schedule:
+    - cron: '00 21 * * *'
   workflow_dispatch:
     
 jobs:
   call-workflow:
-    uses: OpenIsraeliSupermarkets/daily-publish-supermarket-data/.github/workflows/template.yml@${{ github.ref_name }}
+    uses: OpenIsraeliSupermarkets/daily-publish-supermarket-data/.github/workflows/template.yml@{{ github.ref_name }}
     with:
-      operation: "upload_no_compose,clean_all_source_data"
+      operation: "publishing,clean_all_source_data"
     secrets: inherit
