--- a/.github/workflows/_stage_publishing.yml
+++ b/.github/workflows/_stage_publishing.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Publishing
+name: Publishing | Staging
 
 on: 
   schedule:
@@ -10,7 +10,9 @@ on:
     
 jobs:
   call-workflow:
-    uses: OpenIsraeliSupermarkets/daily-publish-supermarket-data/.github/workflows/template.yml@main
+    uses: OpenIsraeliSupermarkets/daily-publish-supermarket-data/.github/workflows/template.yml@{{ github.ref_name }}
     with:
       operation: "publishing,clean_all_source_data"
+      branch: "stage"
+      environment: "staging"
     secrets: inherit
