--- a/.github/workflows/emergency_upload.yml
+++ b/.github/workflows/emergency_upload.yml
@@ -8,7 +8,7 @@ on:
     
 jobs:
   call-workflow:
-    uses: OpenIsraeliSupermarkets/daily-publish-supermarket-data/.github/workflows/template.yml@main
+    uses: OpenIsraeliSupermarkets/daily-publish-supermarket-data/.github/workflows/template.yml@${{ github.ref_name }}
     with:
       operation: "upload_no_compose"
     secrets: inherit
