--- a/.github/workflows/_stage_publishing.yml
+++ b/.github/workflows/_stage_publishing.yml
@@ -12,7 +12,7 @@ jobs:
   call-workflow:
     uses: OpenIsraeliSupermarkets/daily-publish-supermarket-data/.github/workflows/template.yml@${{github.ref_name}}
     with:
-      operation: "publishing,clean_all_source_data"
+      operation: "clean_all_source_data"
       branch: "stage"
       environment: "staging"
     secrets: inherit
