--- a/.github/workflows/_stage_deploy_api.yml
+++ b/.github/workflows/_stage_deploy_api.yml
@@ -7,7 +7,9 @@ on:
 
 jobs:
   deploy:
-    runs-on: [self-hosted, "staging"]
+    runs-on: 
+      - self-hosted
+      - staging
 
     steps:
       - uses: actions/checkout@v3
