--- a/.github/workflows/_stage_publishing.yml
+++ b/.github/workflows/_stage_publishing.yml
@@ -10,7 +10,7 @@ on:
     
 jobs:
   call-workflow:
-    uses: OpenIsraeliSupermarkets/daily-publish-supermarket-data/.github/workflows/template.yml@${{github.ref_name}}
+    uses: OpenIsraeliSupermarkets/daily-publish-supermarket-data/.github/workflows/template.yml@stage
     with:
       operation: "clean_all_source_data"
       branch: "stage"
