--- a/.github/workflows/_stage_scrape.yml
+++ b/.github/workflows/_stage_scrape.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Scrape Itreation | Staging
+name: Staging | Scrape Itreation 
 # if you update 3 hour update the health too
 on: 
   schedule:
