--- a/.github/workflows/publishing_retry.yml
+++ b/.github/workflows/publishing_retry.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Publishing Retry (only next day)
+name: Production | Publishing Retry (only next day)
 
 on: 
   workflow_dispatch:
