two datasets, pass env

--- a/.github/workflows/_prod_deploy_api.yml
+++ b/.github/workflows/_prod_deploy_api.yml
@@ -30,7 +30,11 @@ jobs:
           echo "SUPABASE_URL=${{ secrets.SUPABASE_URL }}" >> $GITHUB_ENV
           echo "KAGGLE_USERNAME=${{ secrets.KAGGLE_USERNAME }}" >> $GITHUB_ENV
           echo "KAGGLE_KEY=${{ secrets.KAGGLE_KEY }}" >> $GITHUB_ENV
+          echo "MONGO_USERNAME=${{ secrets.MONGO_USERNAME }}" >> $GITHUB_ENV
+          echo "MONGO_PASSWORD=${{ secrets.MONGO_PASSWORD }}" >> $GITHUB_ENV
+          echo "KAGGLE_DATASET_REMOTE_NAME=israeli-supermarkets-2024" >> $GITHUB_ENV
 
+          
       - name: Stoping Old Container
         run: docker compose down
 
