--- a/.github/workflows/_prod_publishing.yml
+++ b/.github/workflows/_prod_publishing.yml
@@ -12,5 +12,6 @@ jobs:
   call-workflow:
     uses: OpenIsraeliSupermarkets/daily-publish-supermarket-data/.github/workflows/template.yml@main
     with:
+      kaggle_dataset_remote_name: "israeli-supermarkets-2024"
       operation: "publishing,clean_all_source_data"
     secrets: inherit
