--- a/.github/workflows/_stage_publishing.yml
+++ b/.github/workflows/_stage_publishing.yml
@@ -12,6 +12,7 @@ jobs:
   call-workflow:
     uses: OpenIsraeliSupermarkets/daily-publish-supermarket-data/.github/workflows/template.yml@stage
     with:
+      kaggle_dataset_remote_name: "test-super-dataset-2"
       operation: "clean_all_source_data"
       branch: "stage"
       environment: "staging"
