--- a/.github/workflows/_stage_scrape.yml
+++ b/.github/workflows/_stage_scrape.yml
@@ -12,6 +12,7 @@ jobs:
   call-workflow:
     uses: OpenIsraeliSupermarkets/daily-publish-supermarket-data/.github/workflows/template.yml@stage
     with:
+      kaggle_dataset_remote_name: "test-super-dataset-2"
       operation: "scraping,converting,clean_dump_files,api_update"
       branch: "stage"
       environment: "staging"
