--- a/.github/workflows/template.yml
+++ b/.github/workflows/template.yml
@@ -47,7 +47,10 @@ jobs:
         echo "KAGGLE_USERNAME=${{ secrets.KAGGLE_USERNAME }}" >> $GITHUB_ENV
         echo "KAGGLE_KEY=${{ secrets.KAGGLE_KEY }}" >> $GITHUB_ENV
         echo "OPREATION=${{ inputs.operation }}" >> $GITHUB_ENV
-
+        echo "MONGO_USERNAME=${{ secrets.MONGO_USERNAME }}" >> $GITHUB_ENV
+        echo "MONGO_PASSWORD=${{ secrets.MONGO_PASSWORD }}" >> $GITHUB_ENV
+        echo "KAGGLE_DATASET_REMOTE_NAME=${{ inputs.kaggle_dataset_remote_name }}" >> $GITHUB_ENV
+        
     - name: Build with Docker
       run: docker compose build
 
